# opencv-for-android

app/: build.gradle
app/src/androidTest/java/com/coldwizards/nativedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/coldwizards/nativedemo/: MainActivity.kt
app/src/test/java/com/coldwizards/nativedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: CMakeLists.txt  build.gradle
